assets/stylesheets/common/discourse-reactions.scss
.discourse-reactions-list {
  display: flex;
  align-items: center;

  .reactions {
    display: flex;
    align-items: center;

    .reaction {
      display: flex;
      align-items: center;
      margin-left: -0.25em;

      &:first-child {
        margin-left: 0;
      }

      .emoji {
        width: 1em;
        height: 1em;
      }
    }
  }

  .users {
    font-size: $font-down-1;
    color: $primary-medium;
    margin-left: 0.5em;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    visibility: visible;
    opacity: 1;
  }
}

.discourse-reactions-picker {
  visibility: hidden;
  display: none;
  padding-bottom: 15px;
  z-index: z("usercard") - 2;
  position: relative;

  &.is-expanded {
    animation: 0.33s fadeIn;
    animation-fill-mode: forwards;
    display: flex;
  }

  .container {
    padding: 0.25em;
    box-shadow: shadow("card");
    background-color: $secondary;
    z-index: 1;
  }

  .pickable-reaction {
    // TODO fix this in core
    padding: 0.25em !important;
    margin: 0.25em !important;
    background: none !important;
    border: 1px solid transparent;
    cursor: not-allowed;

    &.can-undo {
      cursor: pointer;
    }

    &.is-used {
      border: 1px solid $tertiary-low;
      border-radius: 3px;
    }

    .emoji {
      width: 1em;
      height: 1em;
    }

    &:hover {
      background: $primary-low !important;
    }
  }
}

.discourse-reactions-state-panel {
  min-width: 235px;
  visibility: hidden;
  display: none;
  padding-bottom: 15px;
  z-index: z("usercard") - 2;
  position: relative;

  &.is-expanded {
    animation: 0.33s fadeIn;
    animation-fill-mode: forwards;
    display: flex;
  }

  .container {
    box-shadow: shadow("card");
    background-color: $secondary;
    display: flex;
    flex-direction: row;
    z-index: 1;
  }

  .counters {
    border-right: 1px solid $primary-low;
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-column-gap: 0.5em;
    grid-row-gap: 0.5em;
    padding: 0.5em;
    margin-bottom: auto;
  }

  .users {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5em;
    grid-row-gap: 0.5em;
    padding: 0.5em;
    margin-bottom: auto;

    .trigger-user-card {
      display: flex;

      width: 21px;
      height: 21px;
    }
  }
}

.discourse-reactions-state-panel-reaction {
  cursor: pointer;
  display: flex;
  align-items: center;

  &:last-child {
    margin: 0;
  }

  &.is-displayed {
    .count {
      font-weight: bold;
      color: $primary-high;
    }
  }

  &:not(.is-displayed) {
    filter: grayscale(1);

    &:hover {
      filter: grayscale(0);
    }
  }

  .count {
    margin-right: 0.5em;
    color: $primary-medium;
  }

  .emoji {
    width: 1em;
    height: 1em;
  }
}

.discourse-reactions-actions {
  display: inline-flex;
  cursor: pointer;

  &.is-liked {
    .d-icon {
      color: $love;
    }
  }

  .fake-zone {
    width: 70px;
    height: 50px;
    border-radius: 25px;
    position: absolute;
    bottom: -15px;
    left: calc(100% / 2 - 35px);
    z-index: 0;
  }
}

.discourse-reactions-reaction-button {
  .btn-reaction {
    outline: none;
    pointer-events: none;
    background: none !important;
  }

  &:hover {
    .d-icon {
      color: $love;
    }
  }

  &.is-liked {
    .d-icon {
      color: $love;
    }

    &:hover {
      .d-icon {
        color: $love;
      }
    }
  }
}

.discourse-reactions-counter {
  display: flex;

  .btn-reaction-counter {
    outline: none;
    background: none !important;
    transition: none;
    cursor: default;

    &:hover {
      color: $primary !important;
    }
  }
}

nav.post-controls .actions {
  display: inline-flex;

  * {
    -webkit-touch-callout: none !important;
    user-select: none !important;
    -webkit-user-select: none !important;
  }
}

.post-stream .gap {
  -webkit-touch-callout: none !important;
  user-select: none !important;
  -webkit-user-select: none !important;
}

